Fix theme-dark visibility

--- a/style/base.css
+++ b/style/base.css
@@ -11,3 +11,7 @@
     font-size: var(--jp-ui-font-size1);
     overflow-y: auto;
 }
+
+.jp-BatchJobManager * {
+  color: inherit !important;
+}
